2011-06-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Fix broken path to clockdrv_shell.h.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/bspreset.c:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* timer/timer.c: Include <rtems/btimer.h>.
	Fix benchmark_timer_read() definition.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-12-03	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* bsp_specs, start/start.S, startup/linkcmds: Use linker command base
	file.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* irq/bsp_irq_init.c: Removed file.
	* Makefile.am, preinstall.am: Reflect change above.  Added generic
	interrupt support modules.
	* include/bsp.h: Define BSP_FEATURE_IRQ_EXTENSION.
	* startup/bspstart.c, irq/bsp_irq_asm.S, clock/clockdrv.c,
	network/network.c: Interrupt support changes.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* make/custom/edb7312.cfg: Use VFP floating point model.

2010-04-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/uart.c: Reflect termios API changes.

2010-04-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* clock/clockdrv.c, irq/bsp_irq_init.c, irq/irq.h
	startup/bspstart.c, network/network.c: make irq data types
	consistent

2010-04-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* start/start.S: Verify boot_card() is passed a NULL.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/edb7312.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/edb7312.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.
