@@ -44,7 +44,9 @@ libbsp_a_SOURCES += ../../shared/bsppost.c ../../shared/bsplibc.c \
 libbsp_a_SOURCES += clock/clockdrv.c
 libbsp_a_SOURCES += ../../shared/clockdrv_shell.h
 # console
-libbsp_a_SOURCES += console/uart.c ../../shared/console.c
+libbsp_a_SOURCES += console/uart.c ../../shared/console.c \
+    ../../shared/console_select.c  ../../shared/console_control.c \
+    ../../shared/console_read.c ../../shared/console_write.c 
 # timer
 libbsp_a_SOURCES += timer/timer.c
 # abort
