@@ -1,3 +1,9 @@
+2011-10-18	Jennifer Averett <Jennifer.Averett@OARcorp.com>
+
+	PR 1917/bsps
+	* Makefile.am, console/uart.c: Modifications to add dynamic tables for
+	libchip serial drivers.
+
 2011-10-07	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* make/custom/rtl22xx_t.cfg: Remove USE_THUMB (Violates *.cfg
